--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "axios": "^0.26.1",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
     "expo-constants": "~13.0.0",
@@ -32,6 +34,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-material-menu": "^2.0.0",
+    "react-native-paper": "^4.12.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-table-component": "^1.2.2",
